# raytracing

./: .gitignore  Cargo.toml  LICENSE.md  build.rs  plot.py  readme.md  requirements.txt
src/: aabb.rs  aarect.rs  bvh.rs  camera.rs  color.rs  constant_medium.rs  cuboid.rs  hitable.rs  hitable_list.rs  lib.rs  main.rs  material.rs  perlin.rs  ray.rs  rotate.rs  sphere.rs  texture.rs  translate.rs  vec3.rs  world.rs
