[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
clap = { version = "3.1", features = [ "cargo"] }
image = "0.24"
indicatif = "0.16.2"
num_cpus = "1.13"
rand = "0.8"
rayon = "1.5"

[build-dependencies]
anyhow = "1.0"
approx = "0.5"
vergen = { version = "7", default-features = false, features = ["git"] }
